fix alignment of footer

--- a/src/components/footer-css.module.css
+++ b/src/components/footer-css.module.css
@@ -6,10 +6,14 @@
     text-align: center;
 }
 
-.footerText {
+.footerTextContainer {
     font-family: var(--secondary-type-copy);
     font-size: 16px;
     margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .footerLine {
@@ -25,6 +29,8 @@
     text-decoration: underline;
     color: black;
     font-family: var(--secondary-type-emphasis);
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .footerIconList {
@@ -45,16 +51,16 @@
     width: 20px;
 }
 
-.footerText, .footerIconList {
+.footerTextContainer, .footerIconList {
     padding-left: 10px;
 }
 
 @media only screen and (max-width: 768px) {
-    .footerText {
+    .footerTextContainer {
         font-size: 12px;
     }
 
-    .footerText, .footerIconList {
+    .footerTextContainer, .footerIconList {
         padding-left: 20px;
     }
 
@@ -67,7 +73,7 @@
 }
 
 @media only screen and (max-width: 414px) {
-    .footerText {
+    .footerTextContainer {
         padding: 0;
         text-align: left;
         padding-left:20px;
